@startuml

title US015 \n As an Administrator, I want to import geographical areas and sensors from a JSON file.
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor ivory
skinparam FontName verdana
skinparam titleFontSize 10


skinparam class {
  BorderColor indianred
  BackgroundColor indianred
  BackgroundColor ivory
   roundcorner 10
   ArrowFontName Verdana
   ArrowColor indianred
   ArrowFontColor darkslategrey
   FontSize 12
}

class HouseConfigurationController
class HouseConfigurationUI
class JSONReader
class Mapper
class GeographicAreaList
class GeographicArea
class Sensor
class InputUtils

MainUI -- HouseConfigurationUI : >
HouseConfigurationUI -- JSONReader : >
HouseConfigurationUI -- InputUtils : >
JSONReader -- Mapper : >
HouseConfigurationUI -- HouseConfigurationController : >
HouseConfigurationController -- Mapper : >
Mapper -- GeographicArea : >
Mapper -- Sensor : >
HouseConfigurationController -- GeographicAreaList : >

class HouseConfigurationUI {
runUS15(GeographicAreaList);
updateModel();
}

class JSONReader {
readFile(String filePath);
readGeoAreas();
readAreaSensors();
}

class HouseConfigurationController {
addGeoAreasToList(GeographicAreaDTO[], GeographicAreaList)
}

class Mapper {
geoAreaToDTO();
geoAreaDTOToObject();
sensorToDTO();
sensorDTOToObject();
}

class GeographicAreaList{
add();
}

class InputUtils{
getInputPath();
}



@enduml